brat/test/golden/error/nameclash2.brat.golden
Error in test/golden/error/nameclash2.brat on line 2:
type A(x,y) = y
^^^^^^^^^^^^^^^

  Name clash: Identifier `A` is already used

